cmake_minimum_required(VERSION 3.14)
project(DesignPattern-Cpp)

set(CMAKE_CXX_STANDARD 14)

#add_executable(DesignPattern-Cpp "1. Template Method/main.cpp")
#add_executable(DesignPattern-Cpp "2. Strategy/main.cpp")
#add_executable(DesignPattern-Cpp "3. Observer/main.cpp")
#add_executable(DesignPattern-Cpp "4. Decorator/main.cpp")
#add_executable(DesignPattern-Cpp "5. Bridge/main.cpp")
#add_executable(DesignPattern-Cpp "6. Factory Method/main.cpp")
add_executable(DesignPattern-Cpp "7. Abstract Factory/main.cpp")