cmake_minimum_required(VERSION 3.14)
project(DesignPattern-Cpp)

set(CMAKE_CXX_STANDARD 14)

#add_executable(DesignPattern-Cpp "01. Template Method/main.cpp")
#add_executable(DesignPattern-Cpp "02. Strategy/main.cpp")
#add_executable(DesignPattern-Cpp "03. Observer/main.cpp")
#add_executable(DesignPattern-Cpp "04. Decorator/main.cpp")
#add_executable(DesignPattern-Cpp "05. Bridge/main.cpp")
#add_executable(DesignPattern-Cpp "06. Factory Method/main.cpp")
#add_executable(DesignPattern-Cpp "07. Abstract Factory/main.cpp")
#add_executable(DesignPattern-Cpp "08. Prototype/main.cpp")
#add_executable(DesignPattern-Cpp "09. Builder/main.cpp")
add_executable(DesignPattern-Cpp "10. Singleton/main.cpp")