cmake_minimum_required(VERSION 3.14)
project(DesignPattern-Cpp)

set(CMAKE_CXX_STANDARD 14)

#add_executable(DesignPattern-Cpp "01. Template Method/main.cpp")
#add_executable(DesignPattern-Cpp "02. Strategy/main.cpp")
#add_executable(DesignPattern-Cpp "03. Observer/main.cpp")
#add_executable(DesignPattern-Cpp "04. Decorator/main.cpp")
#add_executable(DesignPattern-Cpp "05. Bridge/main.cpp")
#add_executable(DesignPattern-Cpp "06. Factory Method/main.cpp")
#add_executable(DesignPattern-Cpp "07. Abstract Factory/main.cpp")
#add_executable(DesignPattern-Cpp "08. Prototype/main.cpp")
#add_executable(DesignPattern-Cpp "09. Builder/main.cpp")
#add_executable(DesignPattern-Cpp "10. Singleton/main.cpp")
#add_executable(DesignPattern-Cpp "11. Flyweight/main.cpp")
#add_executable(DesignPattern-Cpp "12. Facade/main.cpp")
#add_executable(DesignPattern-Cpp "13. Adapter/main.cpp")
#add_executable(DesignPattern-Cpp "14. Proxy/main.cpp")
#add_executable(DesignPattern-Cpp "15. Mediator/main.cpp")
#add_executable(DesignPattern-Cpp "16. Composite/main.cpp")
#add_executable(DesignPattern-Cpp "17. Iterator/main.cpp")
#add_executable(DesignPattern-Cpp "18. Chain of Responsibility/main.cpp")
#add_executable(DesignPattern-Cpp "19. Memento/main.cpp")
add_executable(DesignPattern-Cpp "20. Command/main.cpp")